# portal_de_noticias

./: .flake8  .gitignore  README.md  app.py  config.env  cqa.sh  dev.py  pyproject.toml  pytest.ini  uwsgi.py
deploy/: .env  Dockerfile  deploy.sh  docker-compose.yml  portal_de_noticias.conf  portal_de_noticias.ini  start.sh
docker/: docker-compose.yml
src/: app.py  config.py  log.py
src/api/apps/noticias/adapters/db/: models.py  noticias_repository.py
src/api/apps/noticias/domain/: inoticias_repository.py  noticia.py  services.py
src/api/apps/noticias/domain/entities/: autor.py  noticia.py
src/api/apps/noticias/domain/operations/: factory_noticia.py  validation.py
src/api/apps/noticias/domain/operations/valid/: ivalidation.py  validation_to_create.py  validation_to_update.py
src/api/errors/: codes.py  exceptions.py
src/rest/noticias/: conf.py  routes.py  views.py
tests/: conftest.py
tests/api/noticias/domain/: test_factory_noticia.py  test_validation_to_create.py  test_validation_to_update.py
tests/rest/noticias/: test_create.py  test_delete.py  test_search.py  test_update.py
