[tool.poetry]
name = "portal_noticias"
version = "0.1.0"
description = "Portal de Notícias"
authors = ["Igor Rodrigues"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
flask-restx = "^0.2.0"
mongoengine = "^0.21.0"
pydantic = "^1.7.3"
flask-mongoengine = "^1.0.0"
python-dotenv = "^0.15.0"
uWSGI = "^2.0.19"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-flask = "^1.1.0"
mongomock = "^3.21.0"
pytest-env = "^0.6.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
